# Lumerical_MCP_Skill

./: .gitignore  DESIGN.md  IMPROVEMENT_PROMPT.md  MCP_IMPROVEMENT_V22.md  README.md  TROUBLESHOOTING.md  install.py  pyproject.toml
mcp_server/: __init__.py  command_docs.py  server.py  session_manager.py
mcp_server/tools/: __init__.py  ai.py  cml_compiler.py  docs.py  geometry.py  interconnect.py  inverse_design.py  material.py  mpi.py  optimization.py  results.py  script.py  session.py  simulation.py  solver.py  source_monitor.py
reference/: 01-lumapi-python-api.md  02-command-catalog.md  03-pyLumerical-docs.md  04-lumerical-docs-repo.md  05-fdtd-mode-libraries.md  06-mcp-architecture-decisions.md  07-skill-reference.md
skill/: lumerical.md
tests/: __init__.py  test_server.py
