[project]
name = "lumerical-mcp"
version = "1.0.0"
description = "MCP Server for Ansys Lumerical photonic simulation tools (FDTD, MODE, DEVICE, INTERCONNECT)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "numpy>=1.24.0",
]
license = {text = "MIT"}
authors = [
    {name = "Lumerical MCP Developer"}
]
keywords = ["lumerical", "fdtd", "photonic", "simulation", "mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
